--- a/app/globals.css
+++ b/app/globals.css
@@ -135,3 +135,14 @@ p{
   margin-left: auto;
   display: inline-block;
 }
+@media only screen and (max-width:767px){
+  .idea:after{
+    display: none !important;
+  }
+  .navbar ul li {
+    z-index: 9;
+    position: relative;
+    margin: 0 !important;
+    padding: 10px 0 !important;
+}
+}
