--- a/app/section1/idea.module.css
+++ b/app/section1/idea.module.css
@@ -20,3 +20,9 @@
 .inner img{
    margin: 0 auto;
 }
+
+@media only screen and (max-width:500px){
+   .outer{
+      grid-template-columns: auto;
+   }
+}
